# apps

./: ._Jasterish-plan.md  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CUSTOM_LLM_PLAN.md  Cargo.toml  Jasterish-plan.md  LICENSE  PROJECT_SUMMARY.md  SECURITY.md  THIRD-PARTY-LICENSES  TODO.md  agent.py  test_while_else.jstr
debug_logs/: jstar2_crash.elf  t_diagram_crash_report.txt
docs/: 2026-05-28-Jasterish-Compiler-Self-Hosting-Design-Specification.md  2026-05-28-Jasterish-Compiler-Self-Hosting-Requirements.md  2026-05-28-Jasterish-Compiler-Self-Hosting-Technical-Specification.md  2026-05-30-Dual-Root-Synchronization-Agent-Design-Specification.md  2026-05-30-Dual-Root-Synchronization-Agent-Requirements.md  2026-05-30-Dual-Root-Synchronization-Agent-Technical-Specification.md  2026-05-30-Kimi-Execution-Log-and-Recursive-Watching-Design-Specification.md  2026-05-30-Kimi-Execution-Log-and-Recursive-Watching-Requirements.md  2026-05-30-Kimi-Execution-Log-and-Recursive-Watching-Technical-Specification.md  2026-05-30-NINL-DrySemiDryEEG-Capacitive-Design-Specification.md  2026-05-30-NINL-DrySemiDryEEG-Capacitive-Requirements.md  2026-05-30-NINL-DrySemiDryEEG-Capacitive-Technical-Specification.md  2026-05-30-NINL-Jasterish-MicroKernel-Integration-Technical-Specification.md  2026-05-30-NINL-Simulation-Harness-Scope.md  2026-05-30-NeuroDiOS-NonInvasive-Neural-Link-Design-Specification.md  2026-05-30-NeuroDiOS-NonInvasive-Neural-Link-Requirements.md  2026-05-30-NeuroDiOS-NonInvasive-Neural-Link-Technical-Specification.md  (+3 more)
examples/: search.jstr
jstar/: compiler.jstr  (+7 more)
(+331 files in other folders)
