[package]
name = "morphlex"
version = "0.1.0"
edition = "2024"

description = "Deterministic natural language tokenizer and vector compiler"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }
ml-dsa = { version = "0.1.0-rc.7", features = ["rand_core"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
ureq = "2"
scraper = "0.22"
url = "2"
hkdf = "0.13.0-rc.5"
sha3 = "0.11.0-rc.8"
slh-dsa = "0.2.0-rc.4"
signature = "3.0.0-rc.10"

[profile.release]
opt-level = 3
lto = true
strip = true
